--- a/views/seance_view.xml
+++ b/views/seance_view.xml
@@ -10,6 +10,8 @@
                 <field name="seance_date_debut"/>
                 <field name="seance_date_fin"/>
                 <field name="teacher_id"/>
+                <field name="cours_1"/>
+                <field name="cours_2"/>
 
                 <templates>
                     <t t-name="kanban-box">
@@ -23,6 +25,12 @@
                                 </li>
                                 <li>Department code :
                                     <field name="seance_date_fin"/>
+                                </li>
+                                <li>Cours 1  :
+                                    <field name="cours_1"/>
+                                </li>
+                                <li>Cours 2 :
+                                    <field name="cours_2"/>
                                 </li>
 
                             </ul>
@@ -42,6 +50,8 @@
                 <field name="seance_code"/>
                 <field name="seance_id"/>
                 <field name="teacher_id"/>
+                 <field name="cours_1"/>
+                <field name="cours_2"/>
             </calendar>
         </field>
     </record>
@@ -54,6 +64,8 @@
                 <field name="seance_code"/>
                 <field name="seance_date_debut"/>
                 <field name="seance_date_fin"/>
+                 <field name="cours_1"/>
+                <field name="cours_2"/>
                 <field name="seance_id"/>
                 <field name="teacher_id"/>
 
@@ -73,6 +85,8 @@
                 <field name="seance_code"/>
                 <field name="seance_date_debut"/>
                 <field name="seance_date_fin"/>
+              <field name="cours_1"/>
+                <field name="cours_2"/>
                 <field name="seance_id"/>
                 <field name="teacher_id"/>
           </group>
